--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ notifications:
   on_failure: change
 
 php:
-  - nightly # PHP 7.x
+  - 7.1
   - 7.0
 
 env:
@@ -16,7 +16,7 @@ env:
 #    - WP_VERSION=bleeding-maintenance WP_MULTISITE=0
     - WP_VERSION=latest WP_MULTISITE=0
     - WP_VERSION=latest WP_MULTISITE=1
-    
+
 #    - WP_VERSION=latest WP_MULTISITE=0
 #    - WP_VERSION=latest WP_MULTISITE=1
 #    - WP_VERSION=3.7 WP_MULTISITE=0
@@ -24,27 +24,52 @@ env:
 #  - WP_PROJECT_TYPE=plugin WP_VERSION=latest WP_MULTISITE=1 WP_TEST_URL=http://localhost:12000 WP_TEST_USER=test WP_TEST_USER_PASS=test
 
 matrix:
-#    allow_failures:
+    allow_failures:
+      - php: 5.2
+      - php: nightly # PHP 7.x
 #     - env: WP_VERSION=bleeding WP_MULTISITE=0
 #     - env: WP_VERSION=bleeding-maintenance WP_MULTISITE=0
 
     include:
+    - php: nightly
+      env: WP_VERSION=latest WP_MULTISITE=0
     - php: hhvm
       env: WP_VERSION=latest WP_MULTISITE=0
     - php: 5.6
       env: WP_VERSION=latest WP_MULTISITE=0
-    - php: 5.4
-      env: WP_VERSION=latest WP_MULTISITE=0
     - php: 5.3
-      env: WP_VERSION=3.7 WP_MULTISITE=0
-    
+      env: WP_VERSION=4.1 WP_MULTISITE=0
+    - php: 5.2
+      env: WP_VERSION=latest WP_MULTISITE=0
+    - php: 5.2
+      env: WP_VERSION=4.1 WP_MULTISITE=0
+
+## Cache composer bits
+cache:
+  apt: true
+  directories:
+    - vendor
+    - $HOME/.composer/cache
+
 before_script:
-  # Install composer packages before trying to activate themes or plugins
-  # - composer install
+  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' && $TRAVIS_PHP_VERSION != 'nightly' ]]; then
+      phpenv config-rm xdebug.ini;
+    fi
+
+# Install composer packages before trying to activate themes or plugins
+  - if [[ $TRAVIS_PHP_VERSION != 5.2 ]]; then
+      composer self-update;
+      composer install --no-interaction --prefer-source;
+    fi
 
 #  - git clone https://github.com/Seravo/wordpress-test-template wp-tests
   - bash bin/install-wp-tests.sh test root '' localhost $WP_VERSION
 
 script:
-  - phpunit
+# Use phpunit from composer
+  - if [[ $TRAVIS_PHP_VERSION != 5.2 ]]; then
+      vendor/bin/phpunit;
+    else
+      phpunit;
+    fi
 #  - cd tests/spec && bundle exec rspec test.rb
