--- a/.travis.yml
+++ b/.travis.yml
@@ -11,42 +11,32 @@ services:
   - mysql
 
 php:
-  - 7.1
-  - 7.0
+  - 7.4
+  - 5.6
 
 env:
-#    - WP_VERSION=bleeding WP_MULTISITE=0
-#    - WP_VERSION=bleeding-maintenance WP_MULTISITE=0
-    - WP_VERSION=latest WP_MULTISITE=0
-    - WP_VERSION=latest WP_MULTISITE=1
-
-#    - WP_VERSION=latest WP_MULTISITE=0
-#    - WP_VERSION=latest WP_MULTISITE=1
-#    - WP_VERSION=3.7 WP_MULTISITE=0
-#    - WP_VERSION=3.7 WP_MULTISITE=1
-#  - WP_PROJECT_TYPE=plugin WP_VERSION=latest WP_MULTISITE=1 WP_TEST_URL=http://localhost:12000 WP_TEST_USER=test WP_TEST_USER_PASS=test
+  #    - WP_VERSION=bleeding WP_MULTISITE=0
+  #    - WP_VERSION=bleeding-maintenance WP_MULTISITE=0
+  - WP_VERSION=latest WP_MULTISITE=0
+  - WP_VERSION=latest WP_MULTISITE=1
 
 matrix:
-    allow_failures:
-      - php: 5.2
-      - php: nightly # PHP 7.x
-#     - env: WP_VERSION=bleeding WP_MULTISITE=0
-#     - env: WP_VERSION=bleeding-maintenance WP_MULTISITE=0
+  allow_failures:
+    - php: nightly # PHP 8.x
+    - env: WP_VERSION=bleeding WP_MULTISITE=0
+  #     - env: WP_VERSION=bleeding-maintenance WP_MULTISITE=0
 
-    include:
+  include:
+    - php: nightly
+      env: WP_VERSION=bleeding WP_MULTISITE=0
     - php: nightly
       env: WP_VERSION=latest WP_MULTISITE=0
+    - php: 7.3
+      env: WP_VERSION=latest WP_MULTISITE=0
+    - php: 7.0
+      env: WP_VERSION=latest WP_MULTISITE=0
     - php: 5.6
-      env: WP_VERSION=latest WP_MULTISITE=0
-    - php: 5.3
-      env: WP_VERSION=4.1 WP_MULTISITE=0
-      dist: precise
-    - php: 5.2
-      env: WP_VERSION=latest WP_MULTISITE=0
-      dist: precise
-    - php: 5.2
-      env: WP_VERSION=4.1 WP_MULTISITE=0
-      dist: precise
+      env: WP_VERSION=5.3 WP_MULTISITE=0
 
 ## Cache composer bits
 cache:
@@ -57,23 +47,18 @@ cache:
 
 before_script:
   - if [[ $TRAVIS_PHP_VERSION != 'hhvm' && $TRAVIS_PHP_VERSION != 'nightly' ]]; then
-      phpenv config-rm xdebug.ini;
+    phpenv config-rm xdebug.ini;
     fi
 
-# Install composer packages before trying to activate themes or plugins
+  # Install composer packages before trying to activate themes or plugins
   - if [[ $TRAVIS_PHP_VERSION != 5.2 ]]; then
-      composer self-update;
-      composer install --no-interaction --prefer-source;
+    composer self-update;
+    composer install --no-interaction --prefer-source;
     fi
 
-#  - git clone https://github.com/Seravo/wordpress-test-template wp-tests
+  #  - git clone https://github.com/Seravo/wordpress-test-template wp-tests
   - bash bin/install-wp-tests.sh test root '' localhost $WP_VERSION
 
 script:
-# Use phpunit from composer
-  - if [[ $TRAVIS_PHP_VERSION != 5.2 ]]; then
-      vendor/bin/phpunit;
-    else
-      phpunit;
-    fi
+  - vendor/bin/phpunit
 #  - cd tests/spec && bundle exec rspec test.rb
