--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
 		}
 	],
 	"require": {
-		"composer/installers": "1.7.*",
+		"composer-plugin-api": "^1.0",
+		"composer/installers": "1.8.*",
 		"php": ">=5.6.20"
 	},
 	"require-dev": {
