--- a/composer.json
+++ b/composer.json
@@ -26,17 +26,22 @@
 		}
 	],
 	"require": {
-		"composer/installers": "1.9.*",
+		"composer/installers": "2.*",
 		"php": ">=5.6.20"
 	},
 	"require-dev": {
 		"phpmd/phpmd": "@stable",
-		"phpunit/phpunit": "5.*",
-		"mockery/mockery": "1.3.*",
+		"phpunit/phpunit": "^8",
 		"squizlabs/php_codesniffer": "2.*",
-		"phpcompatibility/php-compatibility": "9.*"
+		"phpcompatibility/phpcompatibility-wp": "*",
+		"yoast/phpunit-polyfills": "3.0"
 	},
 	"extra": {
 		"installer-name": "off-canvas-sidebars"
+	},
+	"config": {
+		"allow-plugins": {
+			"composer/installers": true
+		}
 	}
 }
